Updates post and user API
Fixed swaggerhub problem where dev cannot get in certain request like findUser and findPost.
