# backend/routes/api.yaml
@@ -34,7 +34,7 @@ paths:
                   type: string
 
 #Returns an array of all user posts
-  /api/users/getAllUsersPosts:
+  /api/posts/getAllPosts:
     get:
       tags:
         - Users
@@ -53,12 +53,12 @@ paths:
                   type: string
 
 # Find user with username
-  /api/users/findUser:
+  /api/users/getUserByUserID:
     post:
       tags:
         - Users
       summary: Search a user by with their username
-      operationId: findUser
+      operationId: getUserByUserID
       description: Search a user in the database
       consumes: 
       - application/json
@@ -66,12 +66,38 @@ paths:
       - application/json
       parameters:
       - in: body
-        name: findUser
+        name: getUserByUserID
         required: true
         description: Find a user by their username
         schema:
           type: string
-          $ref: '#/definitions/findUser'
+          $ref: '#/definitions/getUserByUserID'
+      responses:
+        200:
+          description: OK
+        404:
+          description: URL Not Found
+
+# Find user with username
+  /api/users/getUserByUserName:
+    post:
+      tags:
+        - Users
+      summary: Search a user by with their username
+      operationId: getUserByUserName
+      description: Search a user in the database
+      consumes: 
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - in: body
+        name: getUserByUserName
+        required: true
+        description: Find a user by their username
+        schema:
+          type: string
+          $ref: '#/definitions/getUserByUserName'
       responses:
         200:
           description: OK
@@ -103,7 +129,7 @@ paths:
         404:
           description: URL Not Found
 
-  /api/users/loginUser:
+  /api/authentication/loginUser:
     post:
       tags:
       - Users
@@ -151,8 +177,33 @@ paths:
         404:
           description: URL Not Found
 
+# Update user information
+  /api/posts/updatePost:
+    put:
+      tags:
+        - Users
+      summary: Update user post
+      operationId: updatePost
+      description: Update user post information
+      consumes: 
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - in: body
+        name: Update
+        required: true
+        description: Updated information
+        schema:
+          $ref: '#/definitions/updatePost'
+      responses:
+        200:
+          description: OK
+        404:
+          description: URL Not Found
+
 # Create user posts
-  /api/users/createPost:
+  /api/posts/createPost:
     post:
       tags:
         - Users
@@ -176,38 +227,13 @@ paths:
         404:
           description: URL Not Found
 
-# New user post
-  /api/users/newPost:
-    post:
-      tags:
-        - Users
-      summary: Create post at user profile
-      operationId: newPost
-      description: Create a post for a user by username
-      consumes: 
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: Create a new post
-        required: true
-        description: User Post
-        schema:
-          $ref: '#/definitions/newPost'
-      responses:
-        200:
-          description: OK
-        404:
-          description: URL Not Found
-
 # Get user posts by username
-  /api/users/findUserPostsByUsername:
+  /api/posts/getUsersPostsByUsername:
     post:
       tags:
         - Users
       summary: Search a users posts by username
-      operationId: findUserPostsByUsername
+      operationId: getUsersPostsByUsername
       description: Get posts from user profile
       consumes: 
       - application/json
@@ -219,7 +245,7 @@ paths:
         required: true
         description: Get user posts by username
         schema:
-          $ref: '#/definitions/findUserPostsByUsername'
+          $ref: '#/definitions/getUsersPostsByUsername'
       responses:
         200:
           description: OK
@@ -227,12 +253,12 @@ paths:
           description: URL Not Found
 
 # Get user posts by author ID
-  /api/users/findUserPostsByID:
+  /api/posts/getUsersPostsByID:
     post:
       tags:
         - Users
       summary: Search a users posts by user ID
-      operationId: findUserPostsByID
+      operationId: getUsersPostsByID
       description: Get posts from user profile
       consumes: 
       - application/json
@@ -244,7 +270,7 @@ paths:
         required: true
         description: Get user posts by user ID
         schema:
-          $ref: '#/definitions/findUserPostsByID'
+          $ref: '#/definitions/getUsersPostsByID'
       responses:
         200:
           description: OK
@@ -252,7 +278,7 @@ paths:
           description: URL Not Found
 
 # Send a verification email to a user
-  /api/users/sendVerificationEmail:
+  /api/authentication/sendVerificationEmail:
     post:
       tags:
         - Users
@@ -300,89 +326,33 @@ paths:
           description: OK
         404:
           description: URL Not Found
-  
-  # Delete a user by ID
-  /api/users/midi:
-    post:
+
+# Delete a user by ID
+  /api/posts/deletePost:
+    delete:
       tags:
         - Users
-      summary: Set up a MIDI file
-      operationId: midi
-      description: Creates midi at db
+      summary: Delete user by username
+      operationId: deletePost
+      description: Delete a user from the database
       consumes:
       - application/json
       produces:
       - application/json
       parameters:
       - in: body
-        name: Create midi
+        name: id
         required: true
-        description: User MIDI
+        description: Delete
         schema:
-          $ref: '#/definitions/midi'
+          $ref: '#/definitions/deletePost'
       responses:
         200:
           description: OK
         404:
           description: URL Not Found
 
-    # Delete a user by ID
-  /api/users/findMidi:
-    post:
-      tags:
-        - Users
-      summary: Set up a MIDI file
-      operationId: findMidi
-      description: find midi at db
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: find midi
-        required: true
-        description: Users MIDI
-        schema:
-          $ref: '#/definitions/findMidi'
-      responses:
-        200:
-          description: OK
-        404:
-          description: URL Not Found
-
-# File Upload Multiform Data
-  /upload:
-    post:
-      tags:
-        - Upload
-      summary: Upload file
-      consumes:
-        - multipart/form-data
-      parameters:
-        - in: formData
-          name: file
-          type: file
-          required: true
-          description: A file to upload.
-        - in: formData
-          name: app
-          type: string
-          required: true
-          description: Name of the model.
-        - in: formData
-          name: id
-          type: string
-          required: true
-          description: Some random Id.
-      responses:
-        200:
-          description: Successful Response
-        400:
-          description: User Error
-        500:
-          description: Internal Server Error
-
+# Definitions components
 definitions:
 
   createUser:
@@ -427,12 +397,13 @@ definitions:
 
   createPost:
     required: 
-    - id
+    - userID
     - title
     - bpm
     - key
+    - visibility
     properties:
-      id:
+      userID:
         type: string
         example: 227d4d04-927b-421e-8d95-6eb91f05af05
       title:
@@ -444,6 +415,9 @@ definitions:
       key:
         type: string
         example: C#
+      visibility:
+        type: boolean
+        example: True
 
   newPost:
     required: 
@@ -465,7 +439,15 @@ definitions:
         type: string
         example: C#
 
-  findUser:
+  getUserByUserID:
+    required: 
+    - id
+    properties:
+      id:
+        type: string
+        example: ba170e4c-024f-4572-9909-fcd56f59354f
+
+  getUserByUserName:
     required: 
     - username
     properties:
@@ -480,6 +462,14 @@ definitions:
       id:
         type: string
         exmaple: 632961af-29ae-4c3a-8f3f-426763a4cf00
+
+  deletePost:
+    required:
+    - id
+    properties:
+      id:
+        type: int
+        exmaple: 5
 
   updateUser:
     required: 
@@ -508,7 +498,34 @@ definitions:
         type: string
         example: JohnDoe96
 
-  findUserPostsByUsername:
+  updatePost:
+    required: 
+    - id
+    - firstName
+    - lastName
+    - email
+    - username
+    properties:
+      id:
+        type: int
+        example: 5
+      title:
+        type: string
+        example: New Post title
+      bpm:
+        type: int
+        example: 50
+      key:
+        type: string
+        example: C#
+      visibility:
+        type: boolean
+        example: True
+      # profilePicture:
+      #   type: string
+      #   example: https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwj_q7q_o_7jAhXDxVAKHWXxD-AQjRx6BAgBEAU&url=https%3A%2F%2Fwww.pexels.com%2Fphoto%2Fwoman-in-black-and-white-dressed-in-white-clothes-812093%2F&psig=AOvVaw0_X_X_X_X_X_X_X&ust=1560984100879087
+
+  getUsersPostsByUsername:
     required:
     - username
     properties:
@@ -516,37 +533,13 @@ definitions:
         type: string
         example: JohnDoe96
 
-  findUserPostsByID:
+  getUsersPostsByID:
     required:
-    - authorId
+    - userID
     properties:
-      id:
+      userID:
         type: string
         example: abb3973d-29ee-4221-aee1-639836c91be0
-
-  midi:
-    required: 
-    - userId
-    - bpm
-    - key
-    properties:
-      id:
-        type: string
-        example: 632961af-29ae-4c3a-8f3f-426763a4cf00
-      bpm:
-        type: int
-        example: 80
-      key:
-        type: string
-        example: C#
-
-  findMidi:
-    required: 
-    - userId
-    properties:
-      id:
-        type: string
-        example: 632961af-29ae-4c3a-8f3f-426763a4cf00
 
   sendVerificationEmail:
     required:
